# holo-nerf

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  justfile  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: docs.yaml  pre-commit.yaml
docs/: background.md  index.md
docs/styles/: custom.css
holonerf/: __init__.py  mapping.py  pointcloud.py
holonerf/config/: lego.txt
nerf/: main.py  mapping.py  pointcloud.py  render.py  utils.py
nerf/config/: args.txt  config.txt  lego.txt
nerf/models/: model.pth
samples/colordata/: color_e_0_0.npy  color_e_0_12.npy  color_e_0_14.npy  color_e_0_9.npy  color_e_1_0.npy  color_e_1_11.npy  color_e_1_12.npy  color_e_1_14.npy  color_e_2_11.npy  color_e_2_15.npy  color_e_2_2.npy  color_e_4_0.npy
samples/depthdata/: depth_e_0_1.npy  depth_e_0_2.npy  depth_e_0_3.npy  depth_e_0_5.npy  depth_e_0_9.npy  depth_e_1_10.npy  depth_e_1_5.npy  depth_e_25_it_12000.npy  depth_e_25_it_18000.npy  depth_e_25_it_30000.npy  depth_e_25_it_6000.npy  depth_e_26_it_12000.npy  depth_e_26_it_26000.npy  depth_e_26_it_28000.npy  depth_e_26_it_30000.npy  depth_e_26_it_34000.npy  depth_e_26_it_38000.npy  depth_e_26_it_6000.npy  depth_e_27_it_12000.npy  depth_e_27_it_14000.npy  depth_e_27_it_24000.npy  depth_e_27_it_28000.npy  depth_e_27_it_8000.npy  depth_e_28_it_0.npy  depth_e_28_it_10000.npy  depth_e_28_it_24000.npy  depth_e_28_it_34000.npy  depth_e_28_it_40000.npy  depth_e_29_it_18000.npy  depth_e_29_it_2000.npy  depth_e_29_it_20000.npy  depth_e_29_it_40000.npy  (+12 more)
(+188 files in other folders)
