[tool.poetry]
name = "holonerf"
version = "0.1.0"
description = "Applying neural radiance fields to obtain 3D spatial data"
authors = ["Chino Franco <chino.franco@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
open3d = "^0.19.0"
opencv-python = "^4.11.0.86"
pillow = "^11.1.0"
torch = "^2.6.0"
tqdm = "^4.67.1"
imutils = "^0.5.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
poetry = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
